--- a/shared/package.json
+++ b/shared/package.json
@@ -6,5 +6,11 @@
   "types": "dist/index.d.ts",
   "files": [
     "/dist"
-  ]
+  ],
+  "dependencies": {
+    "jotai": "^0.15.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.34"
+  }
 }
