--- a/shared/package.json
+++ b/shared/package.json
@@ -8,7 +8,8 @@
     "/dist"
   ],
   "dependencies": {
-    "jotai": "^0.15.2"
+    "jotai": "^0.15.2",
+    "superstruct": "^0.14.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.34"
