--- a/shared/package.json
+++ b/shared/package.json
@@ -7,11 +7,19 @@
   "files": [
     "/dist"
   ],
+  "scripts": {
+    "build": "webpack",
+    "watch": "webpack --watch"
+  },
   "dependencies": {
     "jotai": "^0.15.2",
     "superstruct": "^0.14.2"
   },
   "devDependencies": {
-    "@types/node": "^14.14.34"
+    "@types/node": "^14.14.34",
+    "ts-loader": "^8.0.18",
+    "typescript": "^4.2.3",
+    "webpack": "^5.25.0",
+    "webpack-cli": "^4.5.0"
   }
 }
