--- a/pilaf/ios/rice/Info.plist
+++ b/pilaf/ios/rice/Info.plist
@@ -53,5 +53,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+      <key>CFBundleTypeRole</key>
+      <string>Viewer</string>
+      <key>CFBundleURLName</key>
+      <string>io.mapwize.Mapwize</string>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>dogehouse</string>
+      </array>
+    </dict>
+  </array>
 </dict>
 </plist>
