--- a/pilaf/package.json
+++ b/pilaf/package.json
@@ -10,16 +10,21 @@
 		"lint": "eslint ."
 	},
 	"dependencies": {
+		"@react-native-async-storage/async-storage": "^1.14.1",
+		"@react-native-community/async-storage": "^1.12.1",
 		"@react-native-community/masked-view": "^0.1.10",
 		"@react-navigation/native": "^5.9.3",
+		"query-string": "^6.14.1",
 		"react": "16.13.1",
 		"react-native": "0.63.4",
 		"react-native-elements": "^3.3.1",
 		"react-native-gesture-handler": "^1.10.3",
+		"react-native-inappbrowser-reborn": "^3.5.1",
 		"react-native-reanimated": "^2.0.0",
 		"react-native-safe-area-context": "^3.2.0",
 		"react-native-screens": "^2.18.1",
-		"react-native-vector-icons": "^8.1.0"
+		"react-native-vector-icons": "^8.1.0",
+		"zustand": "^3.3.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.17",
