--- a/pilaf/ios/rice/Info.plist
+++ b/pilaf/ios/rice/Info.plist
@@ -66,5 +66,7 @@
       </array>
     </dict>
   </array>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>We need your permission to enable your microphone</string>
 </dict>
 </plist>
