--- a/pilaf/package.json
+++ b/pilaf/package.json
@@ -21,6 +21,7 @@
 		"react-native": "0.63.4",
 		"react-native-elements": "^3.3.1",
 		"react-native-gesture-handler": "^1.10.3",
+		"react-native-get-random-values": "^1.6.0",
 		"react-native-inappbrowser-reborn": "^3.5.1",
 		"react-native-reanimated": "^2.0.0",
 		"react-native-safe-area-context": "^3.2.0",
