--- a/pilaf/package.json
+++ b/pilaf/package.json
@@ -13,6 +13,7 @@
 		"@react-native-async-storage/async-storage": "^1.14.1",
 		"@react-native-community/async-storage": "^1.12.1",
 		"@react-native-community/masked-view": "^0.1.10",
+		"@react-navigation/bottom-tabs": "^5.11.8",
 		"@react-navigation/native": "^5.9.3",
 		"@react-navigation/stack": "^5.14.3",
 		"mediasoup-client": "^3.6.29",
