--- a/pilaf/package.json
+++ b/pilaf/package.json
@@ -16,6 +16,7 @@
 		"@react-navigation/bottom-tabs": "^5.11.8",
 		"@react-navigation/native": "^5.9.3",
 		"@react-navigation/stack": "^5.14.3",
+		"jotai": "^0.15.3",
 		"mediasoup-client": "^3.6.29",
 		"query-string": "^6.14.1",
 		"react": "16.13.1",
