--- a/pilaf/package.json
+++ b/pilaf/package.json
@@ -16,6 +16,7 @@
 		"@react-navigation/bottom-tabs": "^5.11.8",
 		"@react-navigation/native": "^5.9.3",
 		"@react-navigation/stack": "^5.14.3",
+		"hark": "^1.2.3",
 		"jotai": "^0.15.3",
 		"mediasoup-client": "^3.6.29",
 		"query-string": "^6.14.1",
@@ -25,6 +26,7 @@
 		"react-native-gesture-handler": "^1.10.3",
 		"react-native-get-random-values": "^1.6.0",
 		"react-native-inappbrowser-reborn": "^3.5.1",
+		"react-native-incall-manager": "^3.3.0",
 		"react-native-reanimated": "^2.0.0",
 		"react-native-safe-area-context": "^3.2.0",
 		"react-native-screens": "^2.18.1",
